--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.21.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@supabase/supabase-js": "^2.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-paginate": "^8.1.4",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.60.0",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tests": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass src/sass/main.scss dist/css/main.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
